# assessments

./: README.md
loyalty-middleware-assessment/: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  SOLUTION_TEMPLATE.md  docker-compose.yml  init-db.sql
loyalty-middleware-assessment/backend/: Dockerfile  requirements.txt  seed.py
loyalty-middleware-assessment/backend/bookings/: handlers.py  models.py  serializers.py  urls.py
loyalty-middleware-assessment/backend/bookings/admin/: handlers.py  serializers.py  urls.py
loyalty-middleware-assessment/backend/core/: handlers.py  schema.py  settings.py  settings_test.py  urls.py
loyalty-middleware-assessment/backend/flights/: handlers.py  serializers.py  urls.py
loyalty-middleware-assessment/backend/flights/services/: duffel.py
loyalty-middleware-assessment/backend/scripts/: entrypoint.sh
loyalty-middleware-assessment/backend/tenants/: handlers.py  models.py  serializers.py  urls.py
loyalty-middleware-assessment/backend/utils/: error_types.py  exception_handler.py  exceptions.py  rfc7807.py  throttling.py  trace.py
loyalty-middleware-assessment/docs/: expected_structure.md  getting_started.md
loyalty-middleware-assessment/frontend/: README.md  package-lock.json
loyalty-middleware-assessment/frontend/src/: App.js
loyalty-middleware-assessment/mocks/: README.md
loyalty-middleware-assessment/mocks/coffeechain/: pyproject.toml  server.py
loyalty-middleware-assessment/mocks/fintechapp/: pyproject.toml  server.py
loyalty-middleware-assessment/mocks/telcocorp/: Dockerfile  pyproject.toml  server.py
(+28 files in other folders)
